# autoOpenVSP

./: .gitignore  LICENSE  README.md  __init__.py  foo  pyproject.toml
src/: files.py  geometry.py  geometry_exemple.vsp3  vsp2py.py
test/: geometria.vsp3
tests/: test_pytest.py
